my portfolio added

--- a/style.css
+++ b/style.css
@@ -85,10 +85,10 @@ a{
 
 .faded-text{
     user-select: none;
-    font-size: 7rem;
+    font-size: 8rem;
     color:rgb(231,231,231);
     bottom: -16%;
-    left: -5%;
+    left: -12%;
     font-weight: bold;
     transition: all 3s;
 }
@@ -276,4 +276,406 @@ a{
         top:3%;
         left:48%
     }
+  }
+
+  .project-section{
+    background-color: rgb(231,231,231);
+    margin-top:4rem;
+  }
+
+  .project-header{
+    color: var(--bgOrange);
+    font-size: 90px;
+    text-align:center;
+    padding-top: 30px;
+  }
+
+  .project-container{
+    max-width: 1200px;
+    margin: 0 auto;/*center me place karta hai*/
+    padding: 3rem 0;
+    display: flex;
+    flex-direction: column;
+    gap:120px;
+  }
+
+  .project-card{
+    width:90%;
+    height:550px;
+    /* background-image: url(./images/projects/Project1.png);
+    background-size: cover; */
+    /* background-repeat: no-repeat; */
+    position:relative;
+    box-shadow:0px 0px 40px #1f1f1f;
+  }
+
+  .project-card::after{
+    content:"";
+    position:absolute;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+    background-color: #1f1f1f9a;
+    z-index:0;
+    /* transform: scaleX(1); */
+  }
+
+  .project-card::before{
+    content:"";
+    position:absolute;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+    background: linear-gradient(45deg, #343d68, #343d68be, #343d687c);
+    transform:scaleX(0);
+    transform-origin: left;
+    transition: all 0.4s;
+    z-index:1;
+  }
+
+  .project-card:hover::before{
+    transform:scaleX(1);
+  }
+  .project-number{
+    position:absolute;
+    font-size:200px;
+    font-weight:600;
+    color:white;
+    z-index:10;
+    /* display:none; */
+    opacity: 0;
+  }
+
+  .project-card:hover .project-number{
+    /* display:block; */
+    opacity: 1;
+  }
+
+  .project-number-right{
+    right:-40px;
+    top:-45px;
+  }
+
+  .project-number-left{
+    left:-40px;
+    top:-100px;
+  }
+
+  .project-content{
+    position:absolute;
+    display:flex;
+    flex-direction:column;
+    color:white;
+    padding:2em;
+    bottom:20%;
+    z-index:5;
+    gap:1em;
+    transition:all 0.4s;
+  }
+
+  .project-content-left{ 
+    left:10%;
+  }
+
+  .project-content-right{ 
+    right:10%;
+  }
+
+  .project-skills-container{
+    width:70%;
+    display:flex;
+    gap:10px;
+    flex-wrap:wrap;
+  
+  }
+
+  .project-skill{
+    width:40px;
+  }
+.project-heading{
+    font-size: 50px;
+    font-weight: bold;
+    line-height: 3rem;
+}
+
+.project-subheading{
+    width: 80%;
+    font-size: 16px;
+    font-style: italic;
+}
+
+.btn-grp{
+    display: flex;
+    gap: 0.9rem;
+    align-items: center;
+}
+
+.btn-project:hover{
+    border:none;
+  }
+
+  .icon{
+    cursor:pointer;
+    color:white;
+    font-size:35px;
+    transition:all 0.4s;
+  }
+
+  .icon:hover{
+    color:var(--bgOrange);
+  }
+
+  .project-card:hover .project-content{
+    transform:scale(1.1);
+  }
+
+
+  #project1{
+    background-image: url("./images/projects/banner.jpg");
+    background-size: cover;
+  }
+
+  #project2{
+    margin-left: 120px;
+    background-image: url("./images/projects/Natural\ Jungle\ Lifestyle\ Vlog\ Youtube\ Channel\ Art\ \(1\).png");
+    background-size: cover;
+  }
+
+
+  @media (max-width:1300px) {
+    .page-header {
+      padding-top: 30px;
+      color: var(--bgOrange);
+      text-align: center;
+      font-size: 40px;
+    }
+    .project-container {
+      padding: 5px;
+      margin: 10px;
+      gap: 60px;
+    }
+    .project-card {
+      width: 100%;
+      height: 300px;
+    }
+    .project-card {
+      background-size: cover;
+      background-position: center;
+    }
+    .project-content {
+      scale: 0.5;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      top: 0;
+    }
+    .project-content-left {
+      left: 0;
+    }
+    .project-heading {
+      font-size: 40px;
+      width: 100%;
+    }
+    .project-sub-heading {
+      width: 100%;
+    }
+    #project2 {
+      margin-left: 0;
+    }
+    #project4 {
+      margin-left: 0;
+    }
+    .project-skill-container {
+      width: 100%;
+    }
+    .project-skill {
+      width: 35px;
+    }
+    .project-card:hover .project-number {
+      display: none;
+    }
+    .project-card:hover .project-content {
+      scale: 0.55;
+    }
+  }
+
+  .skills-container{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 5rem;
+    /* margin: 2rem; */
+    margin-bottom: 5rem;
+    gap: 2rem;
+
+  }
+
+  .skill-heading{
+    color: var(--bgOrange);
+    font-size: 70px;
+    text-align:center;
+    font-weight: bolder;
+  }
+
+  .skill-images{
+    margin-top: 80px;
+    display:flex;
+    gap:40px;
+    flex-wrap:wrap;
+  }
+
+  .skill-style{
+    width:95px;
+    transition: all 0.5s;
+  }
+
+  .skill-style:hover{
+    transform: scale(1.2);
+  }
+
+  .skills-faded-text{
+    user-select: none;
+    font-size: 8rem;
+    color:rgb(231,231,231);
+    bottom: -16%;
+    right: -10%;
+    font-weight: bold;
+    transition: all 3s;
+  }
+
+  .blob-style{
+    position:absolute;
+    top:75%;
+    left:50%;
+    z-index:-5;
+    transform:translate(-40%, -30%);
+    animation: blobAnimate 3s linear infinite;
+  }
+  
+  @keyframes blobAnimate {
+    50%{
+      top:54%;
+      left:46%;
+    }
+  }
+
+  .caps{
+    font-size: 130px;
+  }
+
+  .contactus-form-container{
+    width: 100%;
+    background-color: rgb(231,231,231);
+  }
+
+  .contactus-heading{
+    font-size: 5em;
+    color: var(--bgOrange);
+    padding-top: 2rem;
+    text-align: center;
+  }
+
+  .contactus-sub-heading{
+    font-size: 3rem;
+    color: #343d68aa;
+    text-align: center;
+    text-transform: capitalize;
+  }
+
+  .contactus-form{
+    margin-top: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .form{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    width: 1000px;
+    margin: 2rem 5rem;
+  }
+
+  .formfield-container{
+    width: 100%;
+  }
+
+  .formfield{
+    width:100%;
+    height: 42px;
+    padding: 0 2rem;
+    font-size: 18px;
+    border-radius: 5px;
+    box-shadow: 2px 2px 10px #1f1f1f;
+    font-weight: 500;
+    border: none;
+    margin: 17px;
+  }
+
+  .formfield-textarea{
+    height: auto;
+    padding-top: 1rem;
+  }
+
+#submit-btn{
+    left: 37%;
+    border: none;
+    font-size: 1.4rem;
+    margin: 0.7rem 0;
+}
+
+#submit-btn:hover{
+    scale: 0.9;
+}
+
+.submit-icon{
+    padding: 0 1rem;
+    font-size: 1.5rem;
+}
+
+footer{
+    position:relative;
+    margin-top:-1px;
+    background-color: #343d68;
+    padding:5rem;
+  }
+  
+  .footer-wrapper{
+    display:flex;
+    gap:1rem;
+    padding:1.2rem;
+    justify-content: space-between;
+    align-items:center;
+  }
+  
+  .footer-faded-text{
+    position:absolute;
+    left:0;
+    bottom:0;color:#535c87;
+    user-select:none;
+    font-size:5em;
+  }
+  
+  .link-wrapper{
+    display:flex;
+    gap:1.2rem;
+  }
+  
+  .link-wrapper div a{
+    color:white;
+    text-decoration:none;
+    transition:all 0.6s;
+  }
+  
+  .link-wrapper div a:hover{
+    color:var(--bgOrange);
+  }
+  
+  .icon-wrapper{
+    display:flex;
+    gap:1rem;
   }
