--- a/style.css
+++ b/style.css
@@ -443,6 +443,11 @@ a{
     background-size: cover;
   }
 
+  #project3{
+    background-image: url("./images/projects/project5.png");
+    background-size: cover;
+  }
+
 
   @media (max-width:1300px) {
     .page-header {
